tests/snapshots/decompiletests__decompiletests__test_run_and_decompile__case_0.snap
---
source: tests/decompiletests.rs
expression: "case(program_str.to_owned() + \" | ?- \" + query_str, result)"
---
p(Z, h(Z,W), f(W)) | ?- p(f(X), h(Y, f(a)), Y)
-----
QUERY
----
000	X	(X4) =	<STR,13>	// f(f(a))
001	Y	(X5) =	<STR,3>	// f(a)

PROGRAM
____
000	W	(X5) =	<STR,3>	// f(a)
001	Z	(X4) =	<STR,13>	// f(f(a))

X1	
X2	
X3	
X4	// query.X, program.Z
X5	// query.Y, program.W
X6	
X7	
X8	

