tests/snapshots/decompiletests__decompiletests__test_run_and_decompile__case_1.snap
---
source: tests/decompiletests.rs
expression: "case(program_str.to_owned() + \" | ?- \" + query_str, result)"
---
f(X, g(X,a)) | ?- f(b, Y)
-----
QUERY
----
000	Y	(HEAP[2]) =	<STR,4>	// g(b, a)

PROGRAM
____

X1	
X2	// query.Y
X3	
X4	

