tests/snapshots/decompiletests__decompiletests__test_run_and_decompile__case_2.snap
---
source: tests/decompiletests.rs
expression: "case(program_str.to_owned() + \" | ?- \" + query_str, result)"
---
f(b, Y) | ?- f(X, g(X,a))
-----
QUERY
----
000	X	(HEAP[2]) =	<STR,8>	// b

PROGRAM
____
000	Y	(HEAP[4]) =	g/2	// g(b, a)

X1	// query.X
X2	// program.Y
X3	// program.Y
X4	

